--- a/DropBear.Blazor/Components/Modals/DropBearModalContainer.razor
+++ b/DropBear.Blazor/Components/Modals/DropBearModalContainer.razor
@@ -3,15 +3,8 @@
 @using DropBear.Blazor.Interfaces
 @inherits DropBear.Blazor.Components.Bases.DropBearComponentBase
 
+
 @foreach (var modal in ModalService.GetAllModals())
 {
-    <DropBearModal Id="@modal.Id"
-                   Title="@modal.Title"
-                   Theme="@modal.Theme"
-                   Buttons="@modal.Buttons"
-                   CloseOnBackdropClick="@modal.CloseOnBackdropClick">
-        <BodyContent>
-            @modal.BodyContent
-        </BodyContent>
-    </DropBearModal>
+    @RenderModal(modal)
 }
