minor snackbar css changes

--- a/DropBear.Blazor/Components/Alerts/DropBearSnackbarNotification.razor.css
+++ b/DropBear.Blazor/Components/Alerts/DropBearSnackbarNotification.razor.css
@@ -63,10 +63,10 @@
   background: none;
   border: none;
   color: inherit;
-  font-weight: bold;
+  font-weight: 500;
   cursor: pointer;
-  padding: var(--padding-default);
-  margin-left: 8px;
+  padding: 4px;
+  margin-left: 4px;
   text-transform: uppercase;
 }
 
