--- a/DropBear.Blazor/Components/Grids/DropBearDataGrid.razor.css
+++ b/DropBear.Blazor/Components/Grids/DropBearDataGrid.razor.css
@@ -129,6 +129,7 @@
 
 .datagrid-table {
   width: 100%;
+  table-layout: fixed;
   border-collapse: separate;
   border-spacing: 0;
 }
@@ -147,6 +148,25 @@
   padding: 0.75rem;
   text-align: left;
   border-bottom: 1px solid var(--border-color);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.datagrid-header .datagrid-cell {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.datagrid-cell-content {
+  flex-grow: 1;
+  min-width: 0;
+}
+
+.datagrid-cell-actions {
+  width: 100px; /* Adjust this value as needed */
+  flex-shrink: 0;
 }
 
 .datagrid-row.header {
