--- a/DropBear.Blazor/Components/Grids/DropBearDataGrid.razor.css
+++ b/DropBear.Blazor/Components/Grids/DropBearDataGrid.razor.css
@@ -160,8 +160,14 @@
 }
 
 .datagrid-cell-content {
+  display: flex;
+  align-items: center;
   flex-grow: 1;
   min-width: 0;
+}
+
+.datagrid-cell-sort-icon {
+  margin-left: 5px;
 }
 
 .datagrid-cell-actions {
