--- a/DropBear.Blazor/Components/Loaders/LongWaitProgressBar.razor
+++ b/DropBear.Blazor/Components/Loaders/LongWaitProgressBar.razor
@@ -1,21 +1,20 @@
 ﻿@inherits DropBear.Blazor.Components.Bases.DropBearComponentBase
 <div class="loading-container">
-    <div class="loading-card @GetThemeCssClass()">
+    <div class="loading-card @ThemeClass">
         <h3>
-            <i class="icon fas fa-tasks" aria-hidden="true"></i>
+            <span class="icon">🕒</span>
             @Title
         </h3>
-        <div class="progress-container" role="progressbar" aria-valuenow="@Progress" aria-valuemin="0" aria-valuemax="100">
-            <div class="progress-bar" style="width: @(Progress)%;">
-                <span class="progress-text">@Progress%</span>
+        <div class="progress-container">
+            <div class="progress-bar" style="width: @_currentProgress%">
+                <span class="progress-text">@_currentProgress%</span>
             </div>
         </div>
-        <p>
-            @Message<span class="dots" aria-hidden="true"></span>
-        </p>
+        <p>@Message</p>
         @if (ShowCancelButton)
         {
-            <button class="btn btn-primary" @onclick="HandleCancelClick">Cancel</button>
+            <button class="btn btn-primary" @onclick="Cancel">@CancelButtonText</button>
         }
     </div>
+
 </div>
