--- a/DropBear.Blazor/Components/Alerts/DropBearSnackbarNotificationContainer.razor.css
+++ b/DropBear.Blazor/Components/Alerts/DropBearSnackbarNotificationContainer.razor.css
@@ -1,7 +1,8 @@
 ﻿.snackbar-container {
   position: fixed;
   bottom: 100px;
-  right: 100px;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
   flex-direction: column-reverse;
   gap: 10px;
@@ -9,4 +10,3 @@
   width: 100%;
   z-index: 9999;
 }
-
