--- a/DropBear.Blazor/Components/Loaders/LongWaitProgressBar.razor
+++ b/DropBear.Blazor/Components/Loaders/LongWaitProgressBar.razor
@@ -1,20 +1,24 @@
 ﻿@inherits DropBear.Blazor.Components.Bases.DropBearComponentBase
-<div class="loading-container">
-    <div class="loading-card @ThemeClass">
-        <h3>
-            <span class="icon">🕒</span>
-            @Title
-        </h3>
-        <div class="progress-container">
+<div class="loading-card @ThemeClass">
+    <h3>
+        <span class="icon">🕒</span>
+        @Title
+    </h3>
+    <div class="progress-container">
+        @if (_isIndeterminate)
+        {
+            <div class="progress-bar indeterminate"></div>
+        }
+        else
+        {
             <div class="progress-bar" style="width: @_currentProgress%">
                 <span class="progress-text">@_currentProgress%</span>
             </div>
-        </div>
-        <p>@Message</p>
-        @if (ShowCancelButton)
-        {
-            <button class="btn btn-primary" @onclick="Cancel">@CancelButtonText</button>
         }
     </div>
-
+    <p>@Message</p>
+    @if (ShowCancelButton)
+    {
+        <button class="btn btn-primary" @onclick="Cancel">@CancelButtonText</button>
+    }
 </div>
