Added !Important to padding top of card footer

--- a/DropBear.Blazor/Components/Cards/DropBearCard.razor.css
+++ b/DropBear.Blazor/Components/Cards/DropBearCard.razor.css
@@ -164,7 +164,7 @@
 
 .card-footer {
   padding: var(--spacing-md) var(--spacing-lg);
-  padding-top: 10px;
+  padding-top: 10px !important;
   border-top: 1px solid var(--dark-border);
   display: flex;
   justify-content: flex-end;
