--- a/DropBear.Blazor/Components/Alerts/DropBearPageAlertContainer.razor.css
+++ b/DropBear.Blazor/Components/Alerts/DropBearPageAlertContainer.razor.css
@@ -1,1 +1,13 @@
-﻿
+﻿.page-alert-container {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap);
+  width: 100%;
+  max-width: 600px; /* Adjust max-width as needed */
+  z-index: var(--z-index-sticky);
+  padding: var(--padding-default);
+}
