Minor refactoring of several files.
Added async overloads to PageAlertService.cs and it's interface.

Updated container css

--- a/DropBear.Blazor/Components/Alerts/DropBearPageAlertContainer.razor
+++ b/DropBear.Blazor/Components/Alerts/DropBearPageAlertContainer.razor
@@ -10,6 +10,7 @@
             Message="@alert.Message"
             Type="@alert.Type"
             Theme="@alert.Theme"
+            IsDismissible="@alert.IsDismissible"
             OnClose="@(() => AlertService.RemoveAlert(alert.Id))"/>
     }
 </div>
