--- a/DropBear.Blazor/Components/Alerts/DropBearSnackbarNotificationContainer.razor
+++ b/DropBear.Blazor/Components/Alerts/DropBearSnackbarNotificationContainer.razor
@@ -3,8 +3,9 @@
 <div class="snackbar-container">
     @foreach (var snackbar in _snackbars)
     {
-        <DropBearSnackbarNotification @ref="snackbar.ComponentRef"
-                                      SnackbarId="@snackbar.Id.ToString().Replace("-", "")"
+        <DropBearSnackbarNotification @key="snackbar.Id"
+                                      @ref="snackbar.ComponentRef"
+                                      SnackbarId="@snackbar.Id.ToString("N")"
                                       Title="@snackbar.Title"
                                       Message="@snackbar.Message"
                                       Type="snackbar.Type"
@@ -12,6 +13,6 @@
                                       Duration="snackbar.Duration"
                                       IsDismissible="snackbar.IsDismissible"
                                       ActionText="@snackbar.ActionText"
-                                      OnAction="snackbar.OnAction"/>
+                                      OnAction="@(() => OnSnackbarAction(snackbar))"/>
     }
 </div>
