Minor css changes to padding and spacing for the actions column of the datagrid

--- a/DropBear.Blazor/Components/Grids/DropBearDataGrid.razor.css
+++ b/DropBear.Blazor/Components/Grids/DropBearDataGrid.razor.css
@@ -239,6 +239,7 @@
   color: var(--text-secondary);
   cursor: pointer;
   transition: color var(--transition-normal), transform var(--transition-normal);
+  padding: var(--padding-default);
 }
 
 .btn-icon:hover {
